# lightspeed-cloud-agents

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: build_workflow_runner.yaml  ci.yaml  e2e_tests.yaml  e2e_tests_temporal.yaml  integration_tests.yaml
demo-data/: change-log.txt  runbook.md
deploy/helm/: values.yaml
deploy/kind/: kind-config-calico.yaml  network-policy.yaml  postgres.yaml  workflow-runner-2-replicas.yaml  workflow-runner.yaml
deploy/mcp-filesystem/: Containerfile
deploy/mcp-kubectl/: Containerfile
deploy/mcp-rhdh-mock/: Containerfile  catalog-data.json  server.py
deploy/podman/: docker-compose.cve-demo.yaml  docker-compose.demo.yaml  docker-compose.temporal.yaml  docker-compose.yaml
deploy/workflow-runner/: Containerfile
docs/: ARCHITECTURE.md  BACKLOG.md  CREATING-AGENTS.md  DEMO.md  DEPLOYMENT.md  GOALS.md  _redirects  architecture-openshell.html  architecture-visualization.html  architecture-with-openshell.md  competitive-analysis-unifai.md  demo-dashboard.html  productization-roadmap.md  rbac.md
docs/gaps/: blocker-analysis.md  ephemeral-execution-gaps.md  ephemeral-execution-implementation-plan.md  gaps-implementation-plan.md  sandbox-runtime-gaps.md  technical-blocker-analysis.md
docs/operations/: load-test-results.md  runbook.md
docs/spikes/: hybrid-streaming-spike.md  openshell-spawner-spike.md  (+1 more)
examples/: DEMO.md  cloud-agents-demo-1.mov  kind-mcp-filesystem.yaml  kind-mcp-kubectl.yaml
schema/: generate.py  workflow-definition.schema.json
tests/: conftest.py
tests/e2e/: test_list.txt  (+10 more)
(+176 files in other folders)
