[project]
name = "lightspeed-cloud-agents"
version = "0.1.0"
description = "Cloud-based agent workflow orchestration platform using Temporal and ephemeral sandbox containers"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "temporalio>=1.9.0",
    "python-json-logger>=4.1.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "pyyaml>=6.0",
    "uvicorn>=0.32.0",
    "starlette>=0.41.0",
]

[project.optional-dependencies]
kubernetes = ["kubernetes>=30.1.0"]
podman = ["podman>=5.0.0"]
tls = ["cryptography>=44.0"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.4",
    "pytest-mock>=3.15",
    "kubernetes>=30.1.0",
    "cryptography>=44.0",
    "black",
    "ruff",
]
load = [
    "pytest>=9.0",
    "pytest-asyncio>=1.4",
    "pytest-mock>=3.15",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_agents"]
